added react-email and email testing endpoints
